r232 (23. 03. 2024):
Added option "(Vertical) Panel Width Animation"
Gage Tracker: Fixed a crash

r231 (22. 03. 2024):
Added option "Show Waypoints for Escape Vehicles"

r230 (20. 03. 2024):
Mission Briefing: Attempt to fix game freezes

r229 (18. 03. 2024):
Attempt to fix crash when quiting heists

r228 (13. 03. 2024):
Updated Zipline icons for players
Fixed a crash in Timer Group

r227 (12. 03. 2024):
Buffs: Fixed a crash with Ex-President perk deck
Lost in Transit: Fixed a crash
Mission Briefing: Fixed tabs not registering input after changing profile

r226 (11. 03. 2024):
Added options "Count of Timers in a Group" and "Damage Reduction"
Improved performance with Ex-President perk deck
Fixed an issue where some heists do not load correct settings for XP Tracker
Assault Tracker: Fixed an issue with animations after endless assault
Crude Awakening: Fixed an issue with achievement popup showing up even when conditions are not met

r225 (05. 03. 2024):
Fixed a visual issue with animated chance in trackers
Assault Tracker: Fixed a crash when assault started (client only)
Slaughterhouse: Fixed a crash outside (client only)

r224 (04. 03. 2024):
Added options "Persistent Berserker", "Show Captain Spawn Chance" and "Damage Absorption"
Buffs: Added count of how many cooldowns are currently running in Hacker PECM

r223 (03. 03. 2024):
Loot Counter: Possible fix to crashing after spawn

r222 (02. 03. 2024):
Shadow Raid: Adjusted count of possible loot bags

r221 (25. 02. 2024):
Assault Delay Tracker: Fixed an issue on Assault start
Achievement Loot Counter: Fixed an issue where the tracker won't destroy after all loot is secured
Daily Side Jobs: Fixed 0 progress in the tracker

r220 (23. 02. 2024):
Attempt to fix stuck trackers after sync
Loot Counter: Fixed an issue where the tracker won't destroy after all loot is secured
Undercover: Fixed a visual failed on achievement "Blow-Out" even the game granted it after completion